--- a/GetOut.csproj
+++ b/GetOut.csproj
@@ -25,6 +25,7 @@
     <ItemGroup>
       <Folder Include="Controllers\" />
       <Folder Include="Models\" />
+      <Folder Include="View\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
