--- a/GetOut.csproj
+++ b/GetOut.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Controllers\" />
+      <Folder Include="Models\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
