--- a/GetOut.csproj
+++ b/GetOut.csproj
@@ -13,6 +13,9 @@
     <ItemGroup>
         <None Remove="Icon.ico"/>
         <None Remove="Icon.bmp"/>
+        <None Update="Mazes\initial.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Icon.ico"/>
@@ -24,7 +27,6 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Controllers\" />
-      <Folder Include="Models\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
