--- a/GetOut.csproj
+++ b/GetOut.csproj
@@ -22,6 +22,7 @@
         <EmbeddedResource Include="Icon.bmp"/>
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="MonoGame.Extended" Version="3.9.0-alpha0107" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303"/>
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303"/>
     </ItemGroup>
