--- a/GetOut.csproj
+++ b/GetOut.csproj
@@ -23,8 +23,13 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="MonoGame.Extended" Version="3.9.0-alpha0107" />
+        <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="3.9.0-alpha0107" />
+        <PackageReference Include="MonoGame.Extended.Tiled" Version="3.9.0-alpha0107" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303"/>
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303"/>
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Content\MainMenu\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
